@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
+        <version>3.2.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.yoanan</groupId>
@@ -14,7 +14,7 @@
     <name>foreign-exchange-app</name>
     <description>Foreign exchange application</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -40,7 +40,7 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
-<!-- testing -->
+        <!-- testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -52,11 +52,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-<!-- testing - mock WebServer-->
+        <!-- testing - mock WebServer-->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.9.1</version>
+            <version>4.12.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -65,45 +65,62 @@
             <version>4.9.1</version>
             <scope>test</scope>
         </dependency>
-<!--       Aspect starter-->
+        <!--       Aspect starter-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-<!--        model mapper-->
+        <!--        model mapper-->
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>2.3.0</version>
         </dependency>
-<!--        Currency and Money API-->
+        <!--        Currency and Money API-->
+        <!-- https://mvnrepository.com/artifact/org.javamoney/moneta -->
         <dependency>
             <groupId>org.javamoney</groupId>
             <artifactId>moneta</artifactId>
             <version>1.4.5</version>
+            <type>pom</type>
         </dependency>
-<!--        webflux-->
+        <!--        webflux-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
+<!--            <version>3.5.3</version>-->
         </dependency>
-<!--        documentation-->
+        <!--        documentation-->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.5.2</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.3.0</version>
+            <version>3.11.2</version>
             <type>maven-plugin</type>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -112,7 +129,7 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>1.5.8</version>
+                <version>2.2.1</version> <!-- Use latest version -->
                 <executions>
                     <execution>
                         <id>generate-docs</id>
@@ -121,20 +138,16 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
+                            <sourceDirectory>src/main/asciidoc</sourceDirectory>
+                            <outputDirectory>target/generated-docs</outputDirectory>
                             <backend>html</backend>
                             <doctype>book</doctype>
-
+                            <attributes>
+                                <snippets>target/generated-snippets</snippets>
+                            </attributes>
                         </configuration>
                     </execution>
                 </executions>
-                <dependencies>
-                    <!-- https://mvnrepository.com/artifact/org.asciidoctor/asciidoctorj -->
-                    <dependency>
-                        <groupId>org.springframework.restdocs</groupId>
-                        <artifactId>spring-restdocs-asciidoctor</artifactId>
-                        <version>${spring-restdocs.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
             <!--        for automation documentation-->
             <plugin>
@@ -153,30 +166,22 @@
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
-                <plugin>
+            <plugin>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>generate-javadoc-json</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>javadoc-no-fork</goal>
-                        </goals>
-                        <configuration>
-                            <doclet>capital.scalable.restdocs.jsondoclet.ExtractDocumentationAsJsonDoclet</doclet>
-                            <docletArtifact>
-                                <groupId>capital.scalable</groupId>
-                                <artifactId>spring-auto-restdocs-json-doclet</artifactId>
-                                <version>2.0.7</version>
-                            </docletArtifact>
-                            <destDir>generated-javadoc-json</destDir>
-                            <reportOutputDirectory>${project.build.directory}</reportOutputDirectory>
-                            <useStandardDocletOptions>false</useStandardDocletOptions>
-                            <show>package</show>
-                        </configuration>
-                    </execution>
-                </executions>
+                <version>3.6.3</version>
+                <configuration>
+                    <doclint>none</doclint>
+                    <doclet>capital.scalable.restdocs.jsondoclet.ExtractDocumentationAsJsonDoclet</doclet>
+                    <docletArtifact>
+                        <groupId>capital.scalable</groupId>
+                        <artifactId>spring-auto-restdocs-json-doclet</artifactId>
+                        <version>2.0.7</version>
+                    </docletArtifact>
+                    <useStandardDocletOptions>false</useStandardDocletOptions>
+                    <additionalJOptions>
+                        <additionalJOption>-J--add-opens=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
+                    </additionalJOptions>
+                </configuration>
             </plugin>
         </plugins>
     </build>
